Grunt changes to compile less

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title></title>
   <meta name="description" content="">
-  <meta name="viewport" content="initial-scale=1" />
+  <meta name="viewport" content="initial-scale=1"/>
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
   <!-- build:css(.) styles/vendor.css -->
   <!-- bower:css -->
@@ -31,7 +31,8 @@
     <h1 class="md-toolbar-tools" layout-align-gt-sm="center">Hello World</h1>
   </md-toolbar>
   <div layout="row" flex>
-    <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-sm')">
+    <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left"
+                md-is-locked-open="$mdMedia('gt-sm')">
 
     </md-sidenav>
     <div layout="column" flex id="content">
@@ -42,9 +43,8 @@
   </div>
 </div>
 
-<div class="column">
-  <div ng-view=""></div>
-</div>
+<div ng-view="" class="column"></div>
+
 
 <div class="footer">
   <div class="container">
@@ -77,6 +77,7 @@
 <script src="bower_components/angular-touch/angular-touch.js"></script>
 <script src="bower_components/angular-aria/angular-aria.js"></script>
 <script src="bower_components/angular-material/angular-material.js"></script>
+<script src="bower_components/angular-translate/angular-translate.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
